# rusty-valve

./: .gitignore  Cargo.toml  README.md  bee_movie.txt
.github/workflows/: release.yml  test.yml
resources/config/: config.ini
resources/services/freebsd/: rusty_valve  stalwart.rc.sh
resources/services/systemd/: rusty-valve.service
src/: config.rs  connection.rs  listeners.rs  main.rs  server.rs  services.rs  utils.rs
src/config/: ini_file.rs  settings.rs
src/listeners/: tcp_rp.rs  tls_http_rp.rs  transparent_rp.rs
src/services/: embedded_certbot.rs  gatekeeper_auth.rs  load_balancer.rs  ssh_tarpit.rs
src/services/gatekeeper_auth/: webpage.rs
src/services/ssh_tarpit/: bee_movie.rs
src/utils/: conn_tracker.rs  logging.rs  task_tracker.rs
